# cambia-cfr

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  RULES.md  config.yaml  docker-compose.yml  parallel.config.yaml  pyproject.toml  requirements.txt  serial.config.yaml
benchmarks/: BENCHMARK_SUMMARY.md  OS_VS_ES_ANALYSIS.md  TRAVERSAL_ANALYSIS.md  e2e_benchmark_findings.md
benchmarks/gpu_quick/: results.json
benchmarks/network/: gpu_vs_cpu.json  sweep_cpu.json  sweep_gpu.json
config/: bench.config.yaml  deep_train.yaml  parallel.config.yaml  serial.config.yaml
doc/: config.md  exploitability.md  sampling.md
docker/: entrypoint.sh  launch.sh
docs/: architecture.md  config.md  deep_cfr_modules.md  exploitability.md  sampling.md
src/: abstraction.py  agent_state.py  analysis_tools.py  card.py  cfr_trainer.py  cli.py  config.py  constants.py  encoding.py  evaluate_agents.py  game_engine.py  live_display.py  live_log_handler.py  log_archiver.py  main_train.py  networks.py  persistence.py  reservoir.py  serial_rotating_handler.py  utils.py
src/agents/: baseline_agents.py
src/benchmarks/: __init__.py  e2e_bench.py  memory_bench.py  network_bench.py  reporting.py  runner.py  traversal_bench.py  worker_scaling.py
src/cfr/: data_manager_mixin.py  deep_trainer.py  deep_worker.py  exceptions.py  recursion_mixin.py  trainer.py  training_loop_mixin.py  worker.py
src/game/: _ability_mixin.py  _query_mixin.py  _snap_mixin.py  engine.py  helpers.py  (+2 more)
tests/: conftest.py  test_encoding.py  test_networks.py  test_phase0_regression.py  test_reservoir.py
(+13 files in other folders)
